@@ -1,3 +1,6 @@
+2002-12-20 garlick
+    * Added powerman --version and powermand --version options.
+
 2002-11-21 garlick
     * Fixed etc/icebox3.dev to handle flashing multiple beacons.
 
